--- a/design-system/package.json
+++ b/design-system/package.json
@@ -1,18 +1,53 @@
 {
-  "name": "design-system",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+  "name": "wcds",
+  "version": "1.0.0",
+  "description": "Web component design system",
+  "main": "./dist/wcds.js.mjs",
+  "module": "./dist/wcds.js.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/wcds.js.mjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./package.json": "./package.json"
   },
+  "files": [
+    "dist/**/*",
+    "README.md",
+    "LICENSE"
+  ],
+  "scripts": {
+    "dev": "storybook dev -p 6060",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "build-storybook": "storybook build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nitramburesh/WCDS.git"
+  },
+  "author": "nitramburesh",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/nitramburesh/WCDS/issues"
+  },
+  "homepage": "https://github.com/nitramburesh/WCDS#readme",
   "dependencies": {
     "lit": "^3.3.0"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.1",
+    "@storybook/addon-a11y": "^9.0.15",
+    "@storybook/addon-docs": "^9.0.15",
+    "@storybook/addon-vitest": "^9.0.15",
+    "@storybook/web-components-vite": "^9.0.15",
+    "storybook": "^9.0.15",
     "typescript": "~5.8.3",
-    "vite": "^7.0.0"
+    "vite": "^7.0.0",
+    "vitest": "^3.2.4",
+    "@vitest/browser": "^3.2.4",
+    "playwright": "^1.53.2",
+    "@vitest/coverage-v8": "^3.2.4"
   }
 }
