--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wcds",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Web component design system",
   "main": "./dist/wcds.js.mjs",
   "module": "./dist/wcds.js.mjs",
@@ -14,7 +14,7 @@
   },
   "files": [
     "dist/**/*",
-    "README.md",
+    "./README.md",
     "LICENSE"
   ],
   "scripts": {
