--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web component design system",
   "main": "./dist/wcds.js.mjs",
   "module": "./dist/wcds.js.mjs",
+  "type": "module",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
@@ -18,7 +19,8 @@
     "LICENSE"
   ],
   "scripts": {
-    "dev": "storybook dev -p 6060",
+    "prepare": "node src/tokens/prepare-tokens.js",
+    "dev": "pnpm prepare && storybook dev -p 6060",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "build-storybook": "storybook build"
@@ -39,15 +41,16 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
     "@storybook/addon-a11y": "^9.0.15",
-    "@storybook/addon-docs": "^9.0.15",
+    "@storybook/addon-docs": "^9.1.8",
     "@storybook/addon-vitest": "^9.0.15",
     "@storybook/web-components-vite": "^9.0.15",
+    "@types/node": "^24.5.2",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "playwright": "^1.53.2",
     "storybook": "^9.0.15",
     "typescript": "~5.8.3",
     "vite": "^7.0.0",
-    "vitest": "^3.2.4",
-    "@vitest/browser": "^3.2.4",
-    "playwright": "^1.53.2",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   }
 }
