--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wcds",
-  "version": "0.1.3",
+  "version": "0.1.6",
   "description": "Web component design system",
   "main": "./dist/wcds.js",
   "module": "./dist/wcds.js",
@@ -8,8 +8,9 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/wcds.js.mjs",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/wcds.js",
+      "require": "./dist/wcds.js"
     },
     "./package.json": "./package.json"
   },
@@ -38,6 +39,9 @@
   "dependencies": {
     "lit": "^3.3.0"
   },
+  "peerDependencies": {
+    "lit": "^3.0.0"
+  },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
     "@storybook/addon-a11y": "^9.0.15",
@@ -51,6 +55,7 @@
     "storybook": "^9.0.15",
     "typescript": "~5.8.3",
     "vite": "^7.0.0",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
   }
 }
