--- a/package.json
+++ b/package.json
@@ -37,29 +37,27 @@
   },
   "homepage": "https://github.com/nitramburesh/WCDS#readme",
   "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8",
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.16",
-    "daisyui": "^5.3.8",
-    "lit": "^3.3.0",
-    "tailwindcss": "^4.1.16"
-  },
-  "peerDependencies": {
-    "lit": "^3.0.0"
-  },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
     "@storybook/addon-a11y": "^9.0.15",
     "@storybook/addon-docs": "^9.1.8",
     "@storybook/addon-vitest": "^9.0.15",
     "@storybook/web-components-vite": "^9.0.15",
+    "@tailwindcss/vite": "^4.1.16",
     "@types/node": "^24.5.2",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "daisyui": "^5.3.9",
+    "lit": "^3.3.1",
     "playwright": "^1.53.2",
     "storybook": "^9.0.15",
+    "tailwindcss": "^4.1.16",
     "typescript": "~5.8.3",
     "vite": "^7.0.0",
     "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
+  },
+  "peerDependencies": {
+    "lit": "^3.3.1"
   }
 }
