--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "import": "./dist/wcds.js",
       "require": "./dist/wcds.js"
     },
-    "./dist/wcds.css": "./dist/wcds.css",
+    "./style": "./dist/wcds.css",
     "./package.json": "./package.json"
   },
   "files": [
