--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "playwright": "^1.53.2",
     "storybook": "^9.0.15",
     "tailwindcss": "^4.1.16",
+    "ts-lit-plugin": "^2.0.2",
     "typescript": "~5.8.3",
     "vite": "^7.0.0",
     "vite-plugin-dts": "^4.5.4",
