--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/wcds.js",
   "module": "./dist/wcds.js",
   "type": "module",
-  "types": "dist/index.d.ts",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -23,7 +23,7 @@
   "scripts": {
     "prepare": "node src/tokens/prepare-tokens.js",
     "dev": "pnpm prepare && storybook dev -p 6060",
-    "build": "tsc && vite build",
+    "build": "vite build && tsc -p tsconfig.build.json",
     "preview": "vite preview",
     "build-storybook": "storybook build",
     "pack": "build && npm pack"
