--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "build": "vite build && tsc -p tsconfig.build.json",
     "preview": "vite preview",
     "build-storybook": "storybook build",
-    "pack": "build && npm pack"
+    "prepack": "pnpm run build",
+    "pack": "npm pack"
   },
   "repository": {
     "type": "git",
