--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "LICENSE"
   ],
   "scripts": {
-    "prepare": "node src/tokens/prepare-tokens.js",
+    "prepare": "node src/tokens/build-tokens.js",
     "dev": "pnpm prepare && storybook dev -p 6060",
     "build": "vite build && tsc -p tsconfig.build.json",
     "preview": "vite preview",
     "build-storybook": "storybook build",
     "prepack": "pnpm run build",
-    "pack": "npm pack"
+    "pack": "npm pack",
+    "manifest": "pnpm cem analyze"
   },
   "repository": {
     "type": "git",
@@ -42,26 +43,27 @@
   "packageManager": "pnpm@10.19.0+sha512.c9fc7236e92adf5c8af42fd5bf1612df99c2ceb62f27047032f4720b33f8eacdde311865e91c411f2774f618d82f320808ecb51718bfa82c060c4ba7c76a32b8",
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
+    "@custom-elements-manifest/analyzer": "^0.11.0",
     "@storybook/addon-a11y": "^9.0.15",
     "@storybook/addon-docs": "^9.1.8",
     "@storybook/addon-vitest": "^9.0.15",
     "@storybook/web-components-vite": "^9.0.15",
-    "@tailwindcss/vite": "^4.1.16",
     "@types/node": "^24.5.2",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
-    "daisyui": "^5.3.9",
     "lit": "^3.3.1",
     "playwright": "^1.53.2",
     "storybook": "^9.0.15",
-    "tailwindcss": "^4.1.16",
+    "style-dictionary": "^5.1.1",
     "ts-lit-plugin": "^2.0.2",
     "typescript": "~5.8.3",
     "vite": "^7.0.0",
     "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "wc-storybook-helpers": "^2.0.4"
   },
   "peerDependencies": {
     "lit": "^3.3.1"
-  }
+  },
+  "customElements": "custom-elements.json"
 }
