--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "files": [
     "dist/**/*",
     "./README.md",
-    "LICENSE"
+    "LICENSE",
+    "./custom-elements.json"
   ],
   "scripts": {
     "prepare": "node src/tokens/build-tokens.js",
     "dev": "pnpm prepare && storybook dev -p 6060",
-    "build": "vite build && tsc -p tsconfig.build.json",
+    "build": "vite build && tsc -p tsconfig.build.json && cem analyze",
     "preview": "vite preview",
     "build-storybook": "storybook build",
     "prepack": "pnpm run build",
@@ -51,6 +52,7 @@
     "@types/node": "^24.5.2",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "custom-element-vs-code-integration": "^1.5.0",
     "lit": "^3.3.1",
     "playwright": "^1.53.2",
     "storybook": "^9.0.15",
@@ -65,5 +67,5 @@
   "peerDependencies": {
     "lit": "^3.3.1"
   },
-  "customElements": "custom-elements.json"
+  "customElements": "dist/custom-elements.json"
 }
