fixed tsconfigs, imports, removed tars

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,7 @@
     "experimentalDecorators": true,
     "useDefineForClassFields": false,
     "module": "es2022",
-    "lib": [
-      "ES2022",
-      "DOM",
-      "DOM.Iterable"
-    ],
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "plugins": [
       {
@@ -25,7 +21,7 @@
     /* Bundler mode */
     "moduleResolution": "node",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false,
     "moduleDetection": "force",
     "noEmit": true,
     /* Linting */
@@ -34,7 +30,7 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true,
+    "noUncheckedSideEffectImports": true
   },
   "include": [
     "src/**/*.ts",
@@ -43,7 +39,5 @@
     "src/index.js",
     "src/components/index.js"
   ],
-  "exclude": [
-    "src/**/*.stories.ts"
-  ]
+  "exclude": ["src/**/*.stories.ts"]
 }
