--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "./custom-elements.json"
   ],
   "scripts": {
-    "prepare": "node src/tokens/build-tokens.js",
+    "generate-tokens": "node src/tokens/build-tokens.js",
+    "manifest": "pnpm cem analyze",
     "dev": "pnpm prepare && storybook dev -p 6060",
     "build": "vite build && tsc -p tsconfig.build.json && cem analyze",
     "preview": "vite preview",
     "build-storybook": "storybook build",
     "prepack": "pnpm run build",
     "pack": "npm pack",
-    "manifest": "pnpm cem analyze"
+    "prepare": "pnpm generate-tokens && pnpm manifest"
   },
   "repository": {
     "type": "git",
@@ -55,17 +56,19 @@
     "custom-element-vs-code-integration": "^1.5.0",
     "lit": "^3.3.1",
     "playwright": "^1.53.2",
-    "storybook": "^9.0.15",
     "style-dictionary": "^5.1.1",
     "ts-lit-plugin": "^2.0.2",
     "typescript": "~5.8.3",
     "vite": "^7.0.0",
     "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.2.4",
-    "wc-storybook-helpers": "^2.0.4"
+    "vitest": "^3.2.4"
   },
   "peerDependencies": {
     "lit": "^3.3.1"
   },
-  "customElements": "dist/custom-elements.json"
+  "customElements": "custom-elements.json",
+  "dependencies": {
+    "storybook": "^10.2.0",
+    "wc-storybook-helpers": "^2.0.4"
+  }
 }
