--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "@types/node": "^24.5.2",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
+    "@wc-toolkit/storybook-helpers": "^10.0.0",
     "custom-element-vs-code-integration": "^1.5.0",
     "lit": "^3.3.1",
     "playwright": "^1.53.2",
+    "storybook": "^10.2.0",
     "style-dictionary": "^5.1.1",
     "ts-lit-plugin": "^2.0.2",
     "typescript": "~5.8.3",
@@ -66,9 +68,5 @@
   "peerDependencies": {
     "lit": "^3.3.1"
   },
-  "customElements": "custom-elements.json",
-  "dependencies": {
-    "storybook": "^10.2.0",
-    "wc-storybook-helpers": "^2.0.4"
-  }
+  "customElements": "custom-elements.json"
 }
