--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "build": "vite build && tsc -p tsconfig.build.json && cem analyze",
     "preview": "vite preview",
     "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --auto-accept-changes --force-rebuild",
     "prepack": "pnpm run build",
     "pack": "npm pack",
     "prepare": "pnpm generate-tokens && pnpm manifest"
@@ -54,6 +55,7 @@
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@wc-toolkit/storybook-helpers": "^10.0.0",
+    "chromatic": "^13.3.5",
     "custom-element-vs-code-integration": "^1.5.0",
     "lit": "^3.3.1",
     "playwright": "^1.53.2",
