--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 22.20.0
       - name: Install dependencies
-        run: pnpm install
+        run: corepack enable && pnpm install
       - name: Run Chromatic
         uses: chromaui/action@latest
         with:
