--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wcds",
-  "version": "0.2.24",
+  "version": "0.3.0",
   "description": "Web component design system",
   "main": "./dist/wcds.js",
   "module": "./dist/wcds.js",
@@ -47,10 +47,10 @@
   "devDependencies": {
     "@chromatic-com/storybook": "^4.0.1",
     "@custom-elements-manifest/analyzer": "^0.11.0",
-    "@storybook/addon-a11y": "^9.0.15",
-    "@storybook/addon-docs": "^9.1.8",
-    "@storybook/addon-vitest": "^9.0.15",
-    "@storybook/web-components-vite": "^9.0.15",
+    "@storybook/addon-a11y": "10.2.1",
+    "@storybook/addon-docs": "10.2.1",
+    "@storybook/addon-vitest": "10.2.1",
+    "@storybook/web-components-vite": "10.2.1",
     "@types/node": "^24.5.2",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
@@ -59,7 +59,7 @@
     "custom-element-vs-code-integration": "^1.5.0",
     "lit": "^3.3.1",
     "playwright": "^1.53.2",
-    "storybook": "^10.2.0",
+    "storybook": "10.2.1",
     "style-dictionary": "^5.1.1",
     "ts-lit-plugin": "^2.0.2",
     "typescript": "~5.8.3",
